# fteqw

./: .gitignore  AUTHORS  CMakeLists.txt  CMakePresets.json  README.md
cmake/: FTEGitRevision.cmake  FTEPlugin.cmake  FindWayland.cmake  Findccache.cmake  config.h.in  fte_add_tool.cmake  fte_config.cmake  fte_dependencies.cmake  fte_directories.cmake  fte_engine.cmake  fte_plugins.cmake  fte_revision.cmake  fte_system.cmake  fte_tools.cmake
cmake/plugins/: bullet.cmake  cod.cmake  hl2.cmake  jolt.cmake  narbdrop.cmake
cmake/tools/: ftemaster.cmake  fteqcc.cmake  fteqtv.cmake  httpserver.cmake  imgtool.cmake  iqmtool.cmake  q3asm2.cmake
engine/: Makefile
engine/client/: cl_parse.c  fragstats.c  image.c  m_download.c  m_options.c  merged.h  pr_csqc.c  r_partset.c  r_surf.c  sbar.c  snd_sblaster.c  sys_dos.c  sys_linux.c  sys_sdl.c  winquake.rc
engine/common/: bothdefs.h  com_bih.c  com_phys_jolt.cpp  com_phys_ode.c  common.c  common.h  config_bitchhell.h  config_dreamcast.h  config_fteqw.h  config_fteqw_dos.h  config_psp.h  fs.c  fs_zip.c  gl_q2bsp.c  net_chan.c  net_ice.c  net_wins.c  netinc.h  plugin.c  pr_bgcmd.c  pr_common.h  q1bsp.c
engine/gl/: gl_heightmap.c  gl_model.c  gl_model.h  gl_rlight.c  gl_rmain.c  gl_shader.c  gl_vidcommon.c  gl_vidsdl.c  glquake.h
engine/http/: httpclient.c
engine/qclib/: packager.c  pr_edict.c  pr_exec.c  qcc.h  qcc_pr_lex.c  qccgui.c  qccmain.c  qcctui.c  qcd_main.c
engine/server/: pr_cmds.c  pr_lua.c  pr_wasm.c  progdefs.h  progs.h  server.h  sv_ccmds.c  sv_init.c  sv_main.c  sv_user.c  world.c
engine/sw/: sw.h  sw_backend.c  sw_rast.c  sw_vidsdl.c
plugins/: Makefile
plugins/avplug/: avdecode.c
plugins/bullet/: bulletplug.cpp
plugins/gta2/: fs_sty.c  gbh.c  gta2.c  img_sty.c  mod_gbh.c  sty.c  sty.h
plugins/gta3/: fs_gta3.c  gta3.c  mod_gta3.c
plugins/hl2/: hl2.c  mat_vmt.c  mod_vtmb.c
plugins/jolt/: jolt.cpp
plugins/models/: cpj.c  dnxm.c  models.c
plugins/narbdrop/: fs_ore.c  narbdrop.c
plugins/oldunreal/: fs_upkg.c  mod_psk.c  oldunreal.c  upkg.c  upkg.h
plugins/rott/: fs_rott.c  mod_rott.c  rott.c  rott.h
plugins/saturn/: saturn.c
plugins/source2/: mod_vmap.c  plugin.c
plugins/thps/: mod_psx.c  thps.c
plugins/voxlap/: img_kv6.c  mod_kv6.c  mod_kvx.c  voxlap.c  voxlap.h
plugins/xsv/: m_x.c
tools/: CMakeLists.txt
tools/fteqtv/: CMakeLists.txt
tools/imgtool/: CMakeLists.txt  imgtool.c
tools/iqmtool/: CMakeLists.txt  util.h
tools/q3asm2/: CMakeLists.txt
wasm/: client.c  defs.h  main.c  makefile  world.c  world.wit
